--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,12 +7,12 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${workspaceFolder}/src/cluster_utils.cpp",
-                "${workspaceFolder}/src/nearest_neighbour.cpp",
-                "${workspaceFolder}/src/nearest_pair.cpp",
-                "${workspaceFolder}/src/minmax_split.cpp",
-                "${workspaceFolder}/src/mtree_struct.cpp",
-                "${workspaceFolder}/src/ss_method.cpp",
+                "${workspaceFolder}/src/general/cluster_utils.cpp",
+                "${workspaceFolder}/src/ss/nearest_neighbour.cpp",
+                "${workspaceFolder}/src/ss/nearest_pair.cpp",
+                "${workspaceFolder}/src/ss/minmax_split.cpp",
+                "${workspaceFolder}/src/general/mtree_struct.cpp",
+                "${workspaceFolder}/src/ss/ss_method.cpp",
                 "-I${workspaceFolder}/headers",
                 "-o",
                 "${workspaceFolder}/build/ss_method.exe",
