--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-Og",
                 "${workspaceFolder}/src/general/cluster_utils.cpp",
                 "${workspaceFolder}/src/ss/nearest_neighbour.cpp",
                 "${workspaceFolder}/src/ss/nearest_pair.cpp",
@@ -14,6 +15,10 @@
                 "${workspaceFolder}/src/general/mtree_struct.cpp",
                 "${workspaceFolder}/src/ss/ss_method.cpp",
                 "${workspaceFolder}/src/cp/cp_method.cpp",
+                "${workspaceFolder}/src/cp/bfs_utils.cpp",
+                "${workspaceFolder}/src/cp/dfs_utils.cpp",
+                "${workspaceFolder}/src/cp/sample_utils.cpp",
+                "${workspaceFolder}/src/cp/simple_funcs.cpp",
                 "-I${workspaceFolder}/headers",
                 "-o",
                 "${workspaceFolder}/build/ss_method.exe",
@@ -30,37 +35,6 @@
                 "isDefault": false
             },
             "detail": "Compile all project files into a single executable for ss_method."
-        },
-        {
-            "type": "cppbuild",
-            "label": "Build entire project (CP-main)",
-            "command": "C:\\msys64\\ucrt64\\bin\\g++.exe",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${workspaceFolder}/src/general/cluster_utils.cpp",
-                "${workspaceFolder}/src/ss/nearest_neighbour.cpp",
-                "${workspaceFolder}/src/ss/nearest_pair.cpp",
-                "${workspaceFolder}/src/ss/minmax_split.cpp",
-                "${workspaceFolder}/src/general/mtree_struct.cpp",
-                "${workspaceFolder}/src/cp/cp_methodFA.cpp",
-                "${workspaceFolder}/src/ss/ss_method.cpp",
-                "-I${workspaceFolder}/headers",
-                "-o",
-                "${workspaceFolder}/build/cp_method.exe",
-                "-Wl,--stack,16777216" 
-            ],
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "detail": "Compile all project files into a single executable for cp_method."
         }
     ],
     "version": "2.0.0"
